frontend/test/should_fail/index_exec_node_countFromIndexSame_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:short)
{
	{ i=countNodesFromIndexSame(fooi, 42) }
}
